gitops/unused_external-http/envoy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-http
  labels:
    app.kubernetes.io/name: envoy
    app.kubernetes.io/instance: external-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/instance: external-http
  template:
    metadata:
      labels:
        app.kubernetes.io/name: envoy
        app.kubernetes.io/instance: external-http
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:dev
        imagePullPolicy: Always
        command:
        - envoy
        - -c
        - /config/envoy-config.yaml
        env: []
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: apps
          containerPort: 8444
        - name: admin
          containerPort: 9901
        livenessProbe:
          httpGet:
            path: /ready
            port: admin
        readinessProbe:
          httpGet:
            path: /ready
            port: admin
        resources:
          requests:
            cpu: 5m
            memory: 64Mi
          limits: {}
        volumeMounts:
        - name: envoy-cm
          mountPath: /config
        - name: wildcard-cert
          mountPath: /cert
        - name: geoip
          mountPath: /geoip-envoy
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      - name: envoy-ui
        image: gonitro/envoy-ui:42bae1c
        imagePullPolicy: IfNotPresent
        command:
        - envoy-ui/envoy-ui
        - "--listen-port=9000"
        env: []
        ports:
        - name: ui
          containerPort: 9000
        livenessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: ui
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: ui
        resources:
          requests:
            cpu: 5m
            memory: 64Mi
          limits: {}

      securityContext: {}
      terminationGracePeriodSeconds: 10
      volumes:
      - name: envoy-cm
        configMap:
          name: envoy-cm
      - name: wildcard-cert
        secret:
          secretName: cert-cloud-buc-sh
      - name: geoip
        emptyDir: {}

---
kind: Service
apiVersion: v1
metadata:
  name: external-http
  labels:
    app.kubernetes.io/name: envoy
    app.kubernetes.io/instance: external-http
spec:
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: envoy
    app.kubernetes.io/instance: external-http
  type: NodePort
  ports:
  - name: http
    port: 80
    # nodePort: 32080
    targetPort: 8080
  - name: https
    port: 443
    # nodePort: 32443
    targetPort: 8443
  - name: apps
    port: 8444
    # 49791
    # nodePort: 32444
    targetPort: 8444
  - name: admin
    port: 9901
    targetPort: 9901
  - name: ui
    port: 9000
    targetPort: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoy-admin
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare-dns
spec:
  # tls:
  # - hosts:
  #   - prod-console.buc.sh
  #   secretName: cert-evergreen-console-buc-sh
  rules:
  - host: envoy.buc.sh
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: external-http
            port:
              name: ui
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-http
            port:
              name: admin
